--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,40 @@
 /*  your css code here. If applicable */
+*{
+	padding:0;
+	margin:0;
+}
+body{
+	background-color:#f5f5f5;
+}
+.header{
+	background-color:#011e29;
+	color:white;
+	text-align:center;
+	padding:4%;
+}
+.latest-news-section{
+	background-color:white;
+	padding:20px;
+	width:160px;
+	font-size:15px;
+	margin:10px;
+	margin-left:20px;
+	border-radius:20px;
+	justify-content:center;
+}
+.latest-news-section li{
+	text-align:center;
+	
+}
+.latest-news-section ul{
+	padding-left:35px;
+	padding-top:10px;
+}
+.mainArticle{
+	background-color:wthite;
+	justify-content:center;
+	text-align:center;
+}
+
+
+
