--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@ body{
 	width:200px;
 	padding:10px;
 	margin-left:10px;
-	border-radius:15px
+	border-radius:15px;
+	text-align:center;
 	
 }
 .img1{
