--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,20 @@ body{
 	background-color:#011e29;
 	color:white;
 	text-align:center;
-	padding:4%;
+	padding:3%;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .latest-news-section{
 	background-color:white;
 	padding:20px;
 	width:120px;
 	font-size:10px;
-	margin:10px;
 	margin-left:12px;
 	border-radius:20px;
-	justify-content:center;
+    height: 60px;
+    margin-top: 20px;
+	
 }
 .latest-news-section li{
 	text-align:center;
@@ -28,26 +31,25 @@ body{
 }
 .latest-news-section ul{
 	padding-left:20px;
-	padding-top:10px;
+	padding-top:5px;
 }
 .two{
 	background-color:white;
-	justify-content:center;
 	text-align:center;
 	padding:20px;
 	margin:10px;
 	border-radius:15px;
 	width:200px;
 	font-size:10px;
-	
+	margin-top:20px;
+    height: 90px;
 }
 
 .news{
-	diplay:flex;
-	flex-direction:row;
-	justify-content:space-around;
-	align-items:baseline;
-	flex-wrap:wrap;
+	display:flex;
+	justify-content:center;
+	align-items:normal;
+	
 	
 }
 .two h2{
@@ -60,9 +62,10 @@ padding-bottom:10px;
 	background-color:white;
 	width:200px;
 	padding:10px;
-	margin-left:10px;
+	margin-left:5px;
 	border-radius:15px;
 	text-align:center;
+    margin-top: 20px;
 	
 }
 .img1{
@@ -77,4 +80,3 @@ padding-bottom:10px;
 	width:200px;
 	padding-bottom:5px;
 }
-
